--- a/locale/en.json
+++ b/locale/en.json
@@ -1,22 +1,15 @@
 {
 	"translation": {
-		"initMare": {
-			"before": "init Wock Face Before Mare",
-			"after": "init Wock Face After Mare",
-			"upgrade": "init Wock Upgrade Mare",
-			"close": "init Wock Connection Close Mare"
-		},
-		"face": {
-			"init": "init Wock Face {{-route}}",
-			"exec": "execute Wock Face {{-route}}",
-			"skipInit": {
-				"missRoute": "miss route, skiped",
-				"missHandle": "miss executable handle, skiped"
-			}
-		},
-		"handleClose": "code {{code}}, reason {{reason}}",
-		"castEvent": "cast Wock Event {{type}}",
-		"closeConnection": "close Wock Connection",
-		"heartbeatTimeout": "heartbeat timeout"
+		"Wockman": "Wock",
+		"unknownReason": "unknown reason",
+		"unknownCode": "unknown code",
+		"openOccur": "Wock opened, address: {{address}}",
+		"errorOccur": "Wock error occured, reason: {{reason}}",
+		"closeOccur": "Wock closed, reason: {{reason}}, code: {{code}}",
+		"heartbeatTimeout": "heartbeat timeout",
+		"castError": "Wock cast error",
+		"eventError": "Wock event ({{type}}) error",
+		"onceEventError": "Wock disposable event ({{type}}) error",
+		"paramError": "Wock param ({{which}}) error"
 	}
 }
