--- a/locale/hades/zh.json
+++ b/locale/hades/zh.json
@@ -1,22 +1,15 @@
 {
 	"translation": {
-		"initMare": {
-			"before": "加载~[Wock接口前置中间件]",
-			"after": "加载~[Wock接口后置中间件]",
-			"upgrade": "加载~[Wock协议升级中间件]",
-			"close": "加载~[Wock连接关闭中间件]"
-		},
-		"face": {
-			"init": "加载 ~[Wock接口]{{-route,hadesValue}}",
-			"exec": "执行 ~[Wock接口]{{-route,hadesValue}}",
-			"skipInit": {
-				"missRoute": "缺少~[路由], 已跳过",
-				"missHandle": "缺少可执行的~[处理函数], 已跳过"
-			}
-		},
-		"handleClose": "~[代码]{{code,hadesValue}}, ~[原因]{{reason,hadesValue}}",
-		"castEvent": "发送 ~[Wock事件]{{type,hadesValue}}",
-		"closeConnection": "关闭 ~[Wock连接]",
-		"heartbeatTimeout": "心跳超时"
+		"Wockman": "Wock",
+		"unknownReason": "未知原因",
+		"unknownCode": "未知代码",
+		"openOccur": "~[Wock] 已连接, ~[地址]~{{{address}}}",
+		"errorOccur": "~[Wock] 发生错误, ~[原因]~{{{reason}}}",
+		"closeOccur": "~[Wock] 已关闭, ~[原因]~{{{reason}}}, ~[代码]~{{{code}}}",
+		"heartbeatTimeout": "心跳超时",
+		"castError": "~[Wock] 通讯错误",
+		"eventError": "~[Wock] 事件({{type}})错误",
+		"onceEventError": "~[Wock] 一次性事件({{type}})错误",
+		"paramError": "~[Wock] 参数({{which}})错误"
 	}
 }
